# pi3_arm64

./: .gitignore  0001-update-build.patch  CMakeLists.txt  README.md
boot/: boot.S  entry.S
cmake/tool_chain/: aarch64.cmake
include/: atomic.h  lock.h  mm.h  smp.h  system.h  timer.h  types.h
include/asm/: arm_local_reg.h  base.h  irq.h  sysregs.h
kernel/: irq.c  kernel.c  timer.c
kernel/asm/: entry.S
tools/scripts/: arm64_pi3_build.py  arm64_pi3_gdb.scr  arm64_pi3_gdb.sh
